--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.mediarouter:mediarouter:1.3.0'
     implementation 'com.google.android.material:material:1.6.0'
+    implementation project(path: ':domain')
 
     testImplementation 'junit:junit:4.13.2'
 
