--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // NetWorking dependencies
-    implementation "com.squareup.retrofit2:retrofit2:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 }
