--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,7 +1,13 @@
-plugins {
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
+
+/*plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-}
+    //apply plugin: 'kotlin-kapt'
+}*/
 
 android {
     compileSdk 32
@@ -30,6 +36,8 @@ android {
 }
 
 dependencies {
+
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
@@ -46,5 +54,7 @@ dependencies {
 
     // Android Room
     implementation"androidx.room:room-runtime:2.4.2"
-    annotationProcessor "androidx.room:room-compiler:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+// Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.4.2"
 }
