--- a/data/build.gradle
+++ b/data/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     // Android Room
     implementation"androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
-// Kotlin Extensions and Coroutines support for Room
+    // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.2"
+
+    // Test
+    testImplementation "io.mockk:mockk:1.24.4"
 }
